# b_cam

./: LICENSE  README.md
b_cam/: CMakeLists.txt
b_cam/.ipynb_checkpoints/: package-checkpoint.xml
b_cam/include/b_cam/: plane_segmentation_node.hpp
b_cam/include/b_cam/.ipynb_checkpoints/: odom_node-checkpoint.hpp  rgbd_to_pointcloud-checkpoint.hpp  semantic_fusion_node-checkpoint.hpp  visual_odom_node-checkpoint.hpp  voxel_grid_node-checkpoint.hpp
b_cam/launch/: realsense_bcam.launch.py
b_cam/src/: plane_segmentation_node.cpp  rgbd_to_pointcloud.cpp  semantic_fusion_node.cpp  voxel_grid_node.cpp
b_cam/src/.ipynb_checkpoints/: odom_node-checkpoint.cpp  visual_odom_node-checkpoint.cpp
b_cam_ai/: package.xml  setup.cfg  setup.py
b_cam_ai/.ipynb_checkpoints/: setup-checkpoint.py
b_cam_ai/b_cam_ai/: datasets.py  human_segment_node.py  models.py  referring_segmentation_node.py
b_cam_ai/b_cam_ai/.ipynb_checkpoints/: human_segment_node-checkpoint.py
b_cam_ai/b_cam_ai/data/: vn_templates.txt
